--- a/Cuisine/Cuisine.csproj
+++ b/Cuisine/Cuisine.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Controllers\StoreManagerController.cs" />
@@ -83,12 +84,15 @@
     <Compile Include="Models\SampleData.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ProductOrderViewModel.cs" />
     <Compile Include="ViewModels\ShoppingCartRemoveViewModel.cs" />
     <Compile Include="ViewModels\ShoppingCartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Images\background.jpg" />
     <Content Include="Content\Images\background.png" />
+    <Content Include="Content\Images\button-minus.gif" />
+    <Content Include="Content\Images\button-plus.gif" />
     <Content Include="Content\Images\header.png" />
     <Content Include="Content\Images\home-showcase.png" />
     <Content Include="Content\Images\logo.png" />
@@ -97,6 +101,7 @@
     <Content Include="Content\Images\placeholder.jpg" />
     <Content Include="Content\Images\southbridgelogo.png" />
     <Content Include="Content\Images\topnav.png" />
+    <Content Include="Content\site.bundle.css" />
     <Content Include="Content\site.css" />
     <Content Include="Content\template.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -136,6 +141,7 @@
     <Content Include="Design\cebgray\screenshot.png" />
     <Content Include="Design\cebgray\template.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\Cuisine\Cuisine.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
@@ -227,6 +233,11 @@
     <None Include="Design\cebgray\images\logo.psd" />
     <None Include="Design\cebgray\images\navleft.psd" />
     <None Include="Design\cebgray\images\topnav.psd" />
+    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\ListByCategory.cshtml" />
+    <Content Include="Views\Category\CategoryListMenu.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
