--- a/Cuisine/Cuisine.csproj
+++ b/Cuisine/Cuisine.csproj
@@ -100,6 +100,8 @@
     <Content Include="Content\Images\button-minus.gif" />
     <Content Include="Content\Images\button-plus.gif" />
     <Content Include="Content\Images\fb.gif" />
+    <Content Include="Content\Images\green-button-repeat.png" />
+    <Content Include="Content\Images\green-button-right.png" />
     <Content Include="Content\Images\header.png" />
     <Content Include="Content\Images\home-showcase.png" />
     <Content Include="Content\Images\line.png" />
@@ -201,6 +203,7 @@
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.17.js" />
     <Content Include="Scripts\jquery-ui-1.8.17.min.js" />
+    <Content Include="Scripts\jquery.blockUI.js" />
     <Content Include="Scripts\jquery.easyAccordion.js" />
     <Content Include="Scripts\jquery.gomap-1.3.2.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
@@ -301,6 +304,7 @@
     <None Include="Design\earlyish\images\.DS_Store" />
     <None Include="Design\earlyish\logo.psd" />
     <None Include="Design\earlyish\scripts\.DS_Store" />
+    <Content Include="Views\Order\Order.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
