--- a/Cuisine/packages.config
+++ b/Cuisine/packages.config
@@ -6,4 +6,5 @@
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="Modernizr" version="1.7" />
+  <package id="System.Web.Providers" version="1.0.1" />
 </packages>
